@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-09-24T00:45:40Z",
+  "timestamp" : "2023-09-24T08:10:44Z",
   "count_outdated" : 5071,
   "uniques_outdated" : 1572,
-  "count" : 5288,
-  "uniques" : 1675,
+  "count" : 5289,
+  "uniques" : 1676,
   "clones" : [
     {
       "timestamp": "2023-09-11T00:00:00Z",
@@ -121,6 +121,15 @@
       "uniques": 12,
       "uniques_minmax": [ 7, 12 ],
       "uniques_decinc": [ 0, 12 ]
+    },
+    {
+      "timestamp": "2023-09-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
