@@ -1,5 +1,5 @@
 {
-  "count": 217,
+  "count": 218,
   "uniques": 74,
   "clones": [
     {
@@ -66,6 +66,11 @@
       "timestamp": "2023-09-23T00:00:00Z",
       "count": 29,
       "uniques": 12
+    },
+    {
+      "timestamp": "2023-09-24T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
