@@ -1,3 +1,12 @@
+2023-09-24T08:10:44Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6288913973 # 1923
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-24
+* notice: last 14d: unq all: 74 218
+* notice: prev accum: outdated-unq outdated-all / unq all: 1572 5071 / 1675 5288
+* notice: next accum: outdated-unq outdated-all / unq all: 1572 5071 / 1676 5289
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-09-24]
+
 2023-09-24T00:45:40Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6286967846 # 1922
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-24
